integrar tests, commons, poi, logback, guava y dao básico