@@ -7,6 +7,9 @@ import com.nubix.market.entities.Usuario;
 import com.nubix.market.entities.Rol;
 import com.nubix.market.repositories.RolRepository;
 import com.nubix.market.repositories.UsuarioRepository;
+import org.apache.commons.lang3.StringUtils;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -15,6 +18,8 @@ import com.nubix.market.config.JwtUtils;
 
 @Service
 public class AuthService {
+
+    private static final Logger log = LoggerFactory.getLogger(AuthService.class);
 
     @Autowired
     private UsuarioRepository usuarioRepository;
@@ -52,14 +57,15 @@ public class AuthService {
     public AuthResponse login(LoginRequest request) {
         Optional<Usuario> usuarioOpt = Optional.empty();
 
-        if (request.getUsername() != null && !request.getUsername().isBlank()) {
+        if (!StringUtils.isBlank(request.getUsername())) {
             usuarioOpt = usuarioRepository.findByUsername(request.getUsername());
         }
-        if (usuarioOpt.isEmpty() && request.getEmail() != null && !request.getEmail().isBlank()) {
+        if (usuarioOpt.isEmpty() && !StringUtils.isBlank(request.getEmail())) {
             usuarioOpt = usuarioRepository.findByEmail(request.getEmail());
         }
 
         if (usuarioOpt.isEmpty()) {
+            log.warn("Login fallido: usuario no encontrado (username/email informado)");
             return new AuthResponse(false, "Usuario no encontrado", null);
         }
 
@@ -67,23 +73,26 @@ public class AuthService {
 
         // Validamos la contraseña usando BCrypt
         if (!passwordEncoder.matches(request.getPassword(), usuario.getPassword())) {
+            log.warn("Login fallido: contraseña incorrecta para usuario {}", usuario.getUsername());
             return new AuthResponse(false, "Contraseña incorrecta", null);
         }
 
         // ¡Login exitoso! Generamos el JWT
         String token = jwtUtils.generateToken(usuario.getUsername());
+        log.info("Login exitoso para usuario {} (rol {})", usuario.getUsername(), usuario.getRol().getNombre());
         return new AuthResponse(true, "Login exitoso", usuario.getUsername(), token, usuario.getRol().getNombre());
     }
 
     public AuthResponse adminLogin(LoginRequest request) {
         Optional<Usuario> usuarioOpt = Optional.empty();
-        if (request.getUsername() != null && !request.getUsername().isBlank()) {
+        if (!StringUtils.isBlank(request.getUsername())) {
             usuarioOpt = usuarioRepository.findByUsername(request.getUsername());
         }
-        if (usuarioOpt.isEmpty() && request.getEmail() != null && !request.getEmail().isBlank()) {
+        if (usuarioOpt.isEmpty() && !StringUtils.isBlank(request.getEmail())) {
             usuarioOpt = usuarioRepository.findByEmail(request.getEmail());
         }
         if (usuarioOpt.isEmpty()) {
+            log.warn("Admin login fallido: usuario no encontrado");
             return new AuthResponse(false, "Usuario no encontrado", null);
         }
 
@@ -92,13 +101,16 @@ public class AuthService {
         // Verificamos que el usuario tenga rol de ADMIN o EMPLEADO
         String rolNombre = usuario.getRol().getNombre();
         if (!rolNombre.equals("ADMIN") && !rolNombre.equals("EMPLEADO")) {
+            log.warn("Admin login denegado: usuario {} no es administrativo", usuario.getUsername());
             return new AuthResponse(false, "Acceso denegado: no es un usuario administrativo", null);
         }
         if (!passwordEncoder.matches(request.getPassword(), usuario.getPassword())) {
+            log.warn("Admin login fallido: contraseña incorrecta para {}", usuario.getUsername());
             return new AuthResponse(false, "Contraseña incorrecta", null);
         }
 
         String token = jwtUtils.generateToken(usuario.getUsername());
+        log.info("Admin login exitoso para {} (rol {})", usuario.getUsername(), rolNombre);
         return new AuthResponse(true, "Bienvenido al panel de administración", usuario.getUsername(), token, rolNombre);
     }
 }
